layout bugfix

--- a/css1.css
+++ b/css1.css
@@ -1,5 +1,5 @@
 .mdl-layout{
-  height:auto!important
+ /*height:auto!important*/
 }
 
 .mdl-textfield__label{
